feat(browse-contributors-subjects): Support filters for subject source and type to Inventory subject browse (#665)
* feat(browse-contributors-subjects): Support filters for subject source and type to Inventory subject browse

- Update database schema/triggers
- Update instance/subject index mappings
- Update instance/subject dtos
- Add subject browse secondary sorts
- Adjust converters, subject repository
- Align service logic with changes

Implements: MSEARCH-805